Bring project up to date and branch to rs
- Changed version to '1.0.3.RS.1-SNAPSHOT'
- Changed SCM to richard-strate (github)
- Upgraded library and plugin versions (added release plugin)
- Added ssh/wagon plugin and extension (to deploy on sftp)
- Removed old gpg signature plugin
- Change the old instance creation code